tests/NormalTests/paczka1/fuzzy1/67220452.err
Error in line 1: ZUU0bw A837 5,1
Error in line 13: bdEocW S631 27,6
Error in line 18: s6HUo A837 58,8
Error in line 27: B5Lduo S361 25,1
Error in line 34: B5Lduo S631 29,4
Error in line 38: s6HUo A837 24,0
